--- a/RideShare/app/src/main/res/layout/activity_home.xml
+++ b/RideShare/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         tools:srcCompat="@mipmap/ic_launcher_round" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/createAccountButton"
         android:layout_width="334dp"
         android:layout_height="69dp"
         android:background="@drawable/mybutton"
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
         app:layout_constraintVertical_bias="0.199" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
