--- a/RideShare/app/src/main/res/layout/activity_home.xml
+++ b/RideShare/app/src/main/res/layout/activity_home.xml
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.303" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/signInButton"
         android:layout_width="178dp"
         android:layout_height="65dp"
         android:background="@drawable/mybutton"
