--- a/RideShare/app/src/main/res/layout/activity_sign_in.xml
+++ b/RideShare/app/src/main/res/layout/activity_sign_in.xml
@@ -52,7 +52,7 @@
         app:layout_constraintVertical_bias="0.631" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/loginButton"
         android:layout_width="133dp"
         android:layout_height="76dp"
         android:background="@drawable/mybutton"
