--- a/RideShare/app/src/main/res/layout/activity_home.xml
+++ b/RideShare/app/src/main/res/layout/activity_home.xml
@@ -48,4 +48,15 @@
         app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
         app:layout_constraintVertical_bias="0.199" />
 
+    <Button
+        android:id="@+id/Test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="172dp"
+        android:layout_marginBottom="104dp"
+        android:text="Button"
+        android:onClick="Tester"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
