--- a/RideShare/app/src/main/res/layout/activity_create_account.xml
+++ b/RideShare/app/src/main/res/layout/activity_create_account.xml
@@ -104,13 +104,13 @@
         app:layout_constraintVertical_bias="0.638" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/create"
         android:layout_width="168dp"
         android:layout_height="73dp"
         android:text="Create"
         android:textSize="30sp"
         android:background="@drawable/mybutton"
-        android:onClick="RunRegister"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
