--- a/RideShare/app/src/main/res/layout/activity_find_ride.xml
+++ b/RideShare/app/src/main/res/layout/activity_find_ride.xml
@@ -42,15 +42,12 @@
             android:layout_weight="40"
             android:background="#c0c8d6"
             />
-    </LinearLayout>
-
-    <fragment
-        xmlns:map="http://schemas.android.com/apk/res-auto"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="10"
-        tools:context=".FindRideActivity"/>
+        android:id="@+id/map"
+        tools:context=".MapsActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
+    </LinearLayout>
 </LinearLayout>
