--- a/RideShare/app/src/main/res/layout/activity_home.xml
+++ b/RideShare/app/src/main/res/layout/activity_home.xml
@@ -37,26 +37,16 @@
     <Button
         android:id="@+id/button3"
         android:layout_width="178dp"
-        android:layout_height="65dp"
+        android:layout_height="69dp"
         android:background="@drawable/mybutton"
         android:text="Sign In"
         android:textSize="36sp"
+        android:onClick="GoToSignin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
         app:layout_constraintVertical_bias="0.199" />
-
-    <Button
-        android:id="@+id/Test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="172dp"
-        android:layout_marginBottom="104dp"
-        android:text="Button"
-        android:onClick="Tester"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
