--- a/RideShare/app/src/main/res/layout/activity_sign_in.xml
+++ b/RideShare/app/src/main/res/layout/activity_sign_in.xml
@@ -26,7 +26,7 @@
         android:background="@drawable/edit_text"
         android:ems="10"
         android:gravity="center"
-        android:hint="Email"
+        android:hint="FirstName LastName"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
