--- a/RideShare/app/src/main/res/layout/activity_home.xml
+++ b/RideShare/app/src/main/res/layout/activity_home.xml
@@ -35,13 +35,12 @@
         app:layout_constraintVertical_bias="0.303" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/signInButton"
         android:layout_width="178dp"
         android:layout_height="69dp"
         android:background="@drawable/mybutton"
         android:text="Sign In"
         android:textSize="36sp"
-        android:onClick="GoToSignin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
