fixed findRide/makeride btn

--- a/RideShare/app/src/main/res/layout/activity_profile_page.xml
+++ b/RideShare/app/src/main/res/layout/activity_profile_page.xml
@@ -54,6 +54,7 @@
         android:gravity="center"
         android:text="Find Ride"
         android:textSize="20sp"
+        android:onClick="GotofindRide"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
@@ -69,6 +70,7 @@
         android:gravity="center"
         android:text="Create Ride"
         android:textSize="20sp"
+        android:onClick="goToCreateRide"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
