UI for SearchResult Done-ish

--- a/RideShare/app/src/main/res/layout/activity_search_result.xml
+++ b/RideShare/app/src/main/res/layout/activity_search_result.xml
@@ -8,11 +8,115 @@
     tools:context=".SearchResultActivity">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/textView"
+        android:layout_width="376dp"
+        android:layout_height="44dp"
         android:background="@drawable/edit_text"
-        android:text="WASSUP"
-        android:id="@+id/wassup"
-        android:textSize="36sp" />
+        android:gravity="center"
+        android:text="List of rides available for you:"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.037" />
+
+    <ImageView
+        android:id="@+id/profilePictureImageViewInSearchResult"
+        android:layout_width="83dp"
+        android:layout_height="96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.125"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
+    <TextView
+        android:id="@+id/driverNameTextView"
+        android:layout_width="173dp"
+        android:layout_height="30dp"
+        android:background="@drawable/edit_text"
+        android:text="First Last"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.116" />
+
+    <TextView
+        android:id="@+id/costTextView"
+        android:layout_width="91dp"
+        android:layout_height="30dp"
+        android:background="@drawable/edit_text"
+        android:text="Cost: $$"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.915"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.115" />
+
+    <TextView
+        android:id="@+id/StartingAddressTextViewInResult"
+        android:layout_width="264dp"
+        android:layout_height="28dp"
+        android:background="@drawable/edit_text"
+        android:text="Starting Address: "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.755"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.167" />
+
+    <TextView
+        android:id="@+id/DestinationAddressTextViewInResult"
+        android:layout_width="265dp"
+        android:layout_height="32dp"
+        android:background="@drawable/edit_text"
+        android:text="Destination:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.76"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.218" />
+
+    <TextView
+        android:id="@+id/moreSearchResultBelow"
+        android:layout_width="345dp"
+        android:layout_height="431dp"
+        android:background="@drawable/edit_text"
+        android:gravity="center"
+        android:text="More Search Results will appear here!"
+        android:textSize="30sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.857" />
+
+    <Button
+        android:id="@+id/selectThisRideButtonInSearchResult"
+        android:layout_width="364dp"
+        android:layout_height="35dp"
+        android:text="Select This Ride"
+        android:background="@drawable/mybutton"
+        android:onClick="SelectThisRideButtonClicked"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.278" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
