--- a/RideShare/app/src/main/res/layout/activity_find_ride.xml
+++ b/RideShare/app/src/main/res/layout/activity_find_ride.xml
@@ -29,8 +29,8 @@
         android:background="@drawable/edit_text"
         android:ems="10"
         android:gravity="center"
+        android:hint="Enter Starting Address"
         android:inputType="textPersonName"
-        android:text="Enter Starting Address"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,8 +44,8 @@
         android:background="@drawable/edit_text"
         android:ems="10"
         android:gravity="center"
+        android:hint="Enter Destination Address"
         android:inputType="textPersonName"
-        android:text="Enter Destination Address"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
