--- a/RideShare/app/src/main/res/layout/activity_profile_page.xml
+++ b/RideShare/app/src/main/res/layout/activity_profile_page.xml
@@ -122,4 +122,12 @@
         </LinearLayout>
     </ScrollView>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="295dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
