--- a/RideShare/app/src/main/res/layout/activity_sign_in.xml
+++ b/RideShare/app/src/main/res/layout/activity_sign_in.xml
@@ -43,7 +43,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
