--- a/RideShare/app/src/main/res/layout/activity_search_result.xml
+++ b/RideShare/app/src/main/res/layout/activity_search_result.xml
@@ -21,33 +21,19 @@
         app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintVertical_bias="0.023" />
 
-    <ImageView
-        android:id="@+id/profilePictureImageViewInSearchResult"
-        android:layout_width="83dp"
-        android:layout_height="96dp"
+    <View
+        android:id="@+id/view2"
+        android:layout_width="373dp"
+        android:layout_height="173dp"
+        android:background="@drawable/benditlikebecham"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.125"
-        app:srcCompat="@mipmap/ic_launcher_round" />
-
-    <TextView
-        android:id="@+id/driverNameTextView"
-        android:layout_width="173dp"
-        android:layout_height="30dp"
-        android:background="@drawable/edit_text"
-        android:text="First Last"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.116" />
+        app:layout_constraintVertical_bias="0.113" />
 
     <TextView
         android:id="@+id/costTextView"
@@ -62,6 +48,50 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.115" />
+
+    <Button
+        android:id="@+id/selectThisRideButtonInSearchResult"
+        android:layout_width="364dp"
+        android:layout_height="35dp"
+        android:background="@drawable/mybutton"
+        android:onClick="SelectThisRideButtonClicked"
+        android:text="Request This Ride"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.278" />
+
+    <TextView
+        android:id="@+id/moreSearchResultBelow"
+        android:layout_width="365dp"
+        android:layout_height="435dp"
+        android:background="@drawable/edit_text"
+        android:gravity="center"
+        android:text="More Search Results will appear here!"
+        android:textSize="30sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.857" />
+
+    <TextView
+        android:id="@+id/driverNameTextView"
+        android:layout_width="173dp"
+        android:layout_height="30dp"
+        android:background="@drawable/edit_text"
+        android:text="First Last"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.116" />
 
     <TextView
         android:id="@+id/StartingAddressTextViewInResult"
@@ -89,34 +119,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.218" />
 
-    <TextView
-        android:id="@+id/moreSearchResultBelow"
-        android:layout_width="345dp"
-        android:layout_height="431dp"
-        android:background="@drawable/edit_text"
-        android:gravity="center"
-        android:text="More Search Results will appear here!"
-        android:textSize="30sp"
-        android:textStyle="italic"
+    <ImageView
+        android:id="@+id/profilePictureImageViewInSearchResult"
+        android:layout_width="83dp"
+        android:layout_height="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintHorizontal_bias="0.067"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.857" />
-
-    <Button
-        android:id="@+id/selectThisRideButtonInSearchResult"
-        android:layout_width="364dp"
-        android:layout_height="35dp"
-        android:text="Select This Ride"
-        android:background="@drawable/mybutton"
-        android:onClick="SelectThisRideButtonClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.278" />
+        app:layout_constraintVertical_bias="0.125"
+        app:srcCompat="@mipmap/ic_launcher_round"
+        tools:srcCompat="@mipmap/ic_launcher" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
