--- a/RideShare/app/src/main/res/layout/activity_find_ride.xml
+++ b/RideShare/app/src/main/res/layout/activity_find_ride.xml
@@ -11,7 +11,7 @@
         android:id="@+id/findRideTextView"
         android:layout_width="241dp"
         android:layout_height="54dp"
-        android:background="@drawable/mybutton"
+        android:background="@drawable/benditlikebecham"
         android:gravity="center"
         android:text="Find A Ride"
         android:textSize="30sp"
@@ -24,7 +24,7 @@
 
     <EditText
         android:id="@+id/enterStartingAddressTextView"
-        android:layout_width="304dp"
+        android:layout_width="330dp"
         android:layout_height="42dp"
         android:background="@drawable/edit_text"
         android:ems="10"
@@ -39,7 +39,7 @@
 
     <EditText
         android:id="@+id/enterDestinationAddressTextView"
-        android:layout_width="304dp"
+        android:layout_width="329dp"
         android:layout_height="42dp"
         android:background="@drawable/edit_text"
         android:ems="10"
@@ -61,6 +61,7 @@
         android:gravity="center"
         android:text="Google Maps here connecting two locations with estimated time and other info!"
         android:textStyle="italic"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
